# openai

./: .envrc.sample  .gitignore  CHANGELOG.md  README.md  flake.nix  openai-servant.cabal  openai.cabal  stack.yaml
.cursor/rules/: api-usage.mdc  code-conventions.mdc  development-workflow.mdc  endpoints.mdc  project-overview.mdc
examples/: README.md
examples/openai-example/: Main.hs
examples/weather-chatbot-example/: Main.hs  README.md
openai-servant-example/: Main.hs
src/OpenAI/: Prelude.hs  V1.hs
src/OpenAI/Servant/: Prelude.hs  V1.hs
src/OpenAI/Servant/V1/: Assistants.hs  Audio.hs  AutoOr.hs  Batches.hs  Chat.hs  ChunkingStrategy.hs  DeletionStatus.hs  Embeddings.hs  Error.hs  Files.hs  FineTuning.hs  Images.hs  ListOf.hs  Message.hs  Messages.hs  Models.hs  Moderations.hs  Order.hs  ResponseFormat.hs  Threads.hs  Tool.hs  ToolCall.hs  ToolResources.hs  Uploads.hs  Usage.hs  VectorStores.hs
src/OpenAI/Servant/V1/Audio/: Speech.hs  Transcriptions.hs  Translations.hs
src/OpenAI/Servant/V1/Chat/: Completions.hs
src/OpenAI/Servant/V1/Files/: File.hs  Id.hs  Purpose.hs
src/OpenAI/Servant/V1/FineTuning/: Jobs.hs
src/OpenAI/Servant/V1/FineTuning/Jobs/: Hyperparameters.hs  Id.hs  Integration.hs  Job.hs
src/OpenAI/Servant/V1/FineTuning/Jobs/Id/: Cancel.hs
src/OpenAI/Servant/V1/Images/: Edits.hs  Generations.hs  Image.hs  ResponseFormat.hs  Variations.hs
src/OpenAI/Servant/V1/Threads/: Messages.hs  Runs.hs
src/OpenAI/Servant/V1/Threads/Runs/: Steps.hs
src/OpenAI/Servant/V1/VectorStores/: FileBatches.hs  FileCounts.hs  Files.hs  Status.hs
src/OpenAI/V1/: Assistants.hs  Audio.hs  AutoOr.hs  Batches.hs  ChunkingStrategy.hs  DeletionStatus.hs  Embeddings.hs  Error.hs  Files.hs  Images.hs  ListOf.hs  Message.hs  Models.hs  Moderations.hs  Order.hs  ResponseFormat.hs  Threads.hs  Tool.hs  ToolCall.hs  ToolResources.hs  Uploads.hs  Usage.hs  VectorStores.hs
src/OpenAI/V1/Audio/: Speech.hs  Transcriptions.hs  Translations.hs
src/OpenAI/V1/Chat/: Completions.hs
src/OpenAI/V1/FineTuning/: Jobs.hs
src/OpenAI/V1/Images/: Edits.hs  Generations.hs  Image.hs  ResponseFormat.hs  Variations.hs
src/OpenAI/V1/Threads/: Messages.hs  Runs.hs
src/OpenAI/V1/Threads/Runs/: Steps.hs
src/OpenAI/V1/VectorStores/: FileBatches.hs  FileCounts.hs  Files.hs  Status.hs
tasty/: Main.hs
tasty/data/v1/fine_tuning/jobs/: training_data.json  validation_data.json
tasty/data/v1/uploads/: training_data0.jsonl  training_data1.jsonl
tasty/data/v1/vector_stores/: index.html
