cabal-version:      2.4
name:               openai-servant
version:            1.0.0
synopsis:           Servant bindings to OpenAI
description:        This package provides comprehensive and type-safe bindings
                    to OpenAI using Servant
license:            BSD-3-Clause
license-file:       LICENSE
author:             Gabriella Gonzalez
maintainer:         GenuineGabriella@gmail.com
copyright:          2024 Gabriella Gonzalez
build-type:         Simple

library
    default-language: Haskell2010
    hs-source-dirs:     src
    build-depends:      base >=4.15.0.0 && < 5
                      , aeson
                      , bytestring
                      , containers
                      , filepath
                      , http-api-data
                      , servant
                      , servant-multipart-api
                      , text
                      , time
                      , vector
    exposed-modules:    OpenAI.Servant.V1
                        OpenAI.Servant.V1.Audio
                        OpenAI.Servant.V1.Audio.Speech
                        OpenAI.Servant.V1.Audio.Transcriptions
                        OpenAI.Servant.V1.Audio.Translations
                        OpenAI.Servant.V1.Chat.Completions
                        OpenAI.Servant.V1.Embeddings
                        OpenAI.Servant.V1.FineTuning.Jobs
                        OpenAI.Servant.V1.Files
                        OpenAI.Servant.V1.ListOf
    other-modules:      OpenAI.Servant.Prelude
    default-extensions: DataKinds
                      , DeriveAnyClass
                      , DeriveGeneric
                      , DerivingStrategies
                      , DuplicateRecordFields
                      , OverloadedLists
                      , OverloadedStrings
                      , RecordWildCards
                      , MultiParamTypeClasses
                      , TypeOperators
    ghc-options:        -Wall

test-suite tasty
    type:             exitcode-stdio-1.0
    default-language: Haskell2010
    hs-source-dirs:   tasty
    main-is:          Main.hs
    build-depends:    base
                    , aeson
                    , http-client
                    , http-client-tls
                    , openai-servant
                    , servant
                    , servant-client
                    , servant-multipart-client
                    , tasty
                    , tasty-hunit
                    , text
    ghc-options:      -Wall
