cabal-version:      2.4
name:               openai-servant
version:            1.0.0
synopsis:           Servant bindings to OpenAI
description:        This package provides comprehensive and type-safe bindings
                    to OpenAI using Servant
license:            BSD-3-Clause
license-file:       LICENSE
author:             Gabriella Gonzalez
maintainer:         GenuineGabriella@gmail.com
copyright:          2024 Gabriella Gonzalez
build-type:         Simple

library
    default-language:   Haskell2010
    hs-source-dirs:     src
    build-depends:      base >=4.15.0.0 && < 5
                      , aeson
                      , bytestring
                      , containers
                      , filepath
                      , http-api-data
                      , http-client-tls
                      , servant
                      , servant-multipart-api
                      , servant-client
                      , servant-multipart-client
                      , text
                      , time
                      , vector
    exposed-modules:    OpenAI.Servant.V1
                        OpenAI.Servant.V1.Assistants
                        OpenAI.Servant.V1.Audio
                        OpenAI.Servant.V1.Audio.Speech
                        OpenAI.Servant.V1.Audio.Transcriptions
                        OpenAI.Servant.V1.Audio.Translations
                        OpenAI.Servant.V1.AutoOr
                        OpenAI.Servant.V1.Batches
                        OpenAI.Servant.V1.Chat.Completions
                        OpenAI.Servant.V1.ChunkingStrategy
                        OpenAI.Servant.V1.DeletionStatus
                        OpenAI.Servant.V1.Embeddings
                        OpenAI.Servant.V1.Error
                        OpenAI.Servant.V1.Files
                        OpenAI.Servant.V1.FineTuning.Jobs
                        OpenAI.Servant.V1.Images
                        OpenAI.Servant.V1.Images.Edits
                        OpenAI.Servant.V1.Images.Generations
                        OpenAI.Servant.V1.Images.Image
                        OpenAI.Servant.V1.Images.ResponseFormat
                        OpenAI.Servant.V1.Images.Variations
                        OpenAI.Servant.V1.ListOf
                        OpenAI.Servant.V1.Message
                        OpenAI.Servant.V1.Models
                        OpenAI.Servant.V1.Moderations
                        OpenAI.Servant.V1.Order
                        OpenAI.Servant.V1.ResponseFormat
                        OpenAI.Servant.V1.Threads
                        OpenAI.Servant.V1.Threads.Messages
                        OpenAI.Servant.V1.Threads.Runs
                        OpenAI.Servant.V1.Threads.Runs.Steps
                        OpenAI.Servant.V1.Tool
                        OpenAI.Servant.V1.ToolCall
                        OpenAI.Servant.V1.ToolResources
                        OpenAI.Servant.V1.Uploads
                        OpenAI.Servant.V1.Usage
                        OpenAI.Servant.V1.VectorStores
                        OpenAI.Servant.V1.VectorStores.Files
    other-modules:      OpenAI.Servant.Prelude
    default-extensions: DataKinds
                      , DeriveAnyClass
                      , DeriveGeneric
                      , DerivingStrategies
                      , DuplicateRecordFields
                      , FlexibleInstances
                      , OverloadedLists
                      , OverloadedStrings
                      , RecordWildCards
                      , MultiParamTypeClasses
                      , NamedFieldPuns
                      , TypeApplications
                      , TypeOperators
                      , ViewPatterns
    ghc-options:        -Wall -Wno-missing-fields

test-suite tasty
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   tasty
    main-is:          Main.hs
    build-depends:    base
                    , aeson
                    , http-client
                    , http-client-tls
                    , openai-servant
                    , servant-client
                    , tasty
                    , tasty-hunit
                    , text
    ghc-options:      -Wall

executable openai-servant-example
    default-language: Haskell2010
    hs-source-dirs:   openai-servant-example
    main-is:          Main.hs
    build-depends:    base
                    , openai-servant
                    , text
    ghc-options:      -Wall
