cabal-version:      2.4
name:               openai
version:            1.0.0
synopsis:           Servant bindings to OpenAI
description:        This package provides comprehensive and type-safe bindings
                    to OpenAI using Servant
license:            BSD-3-Clause
license-file:       LICENSE
author:             Gabriella Gonzalez
maintainer:         GenuineGabriella@gmail.com
copyright:          2024 Gabriella Gonzalez
build-type:         Simple

library
    default-language: Haskell2010
    hs-source-dirs:     src
    build-depends:      base >=4.15.0.0 && < 5
                      , aeson
                      , bytestring
                      , servant
                      , text
    exposed-modules:    OpenAI.Servant.V1
                        OpenAI.Servant.V1.Audio
                        OpenAI.Servant.V1.Audio.Speech
    other-modules:      OpenAI.Servant.Prelude
    default-extensions: DataKinds
                      , DeriveAnyClass
                      , DeriveGeneric
                      , DerivingStrategies
                      , OverloadedStrings
                      , MultiParamTypeClasses
                      , TypeOperators
    ghc-options:        -Wall

test-suite tasty
    type:             exitcode-stdio-1.0
    default-language: Haskell2010
    hs-source-dirs:   tasty
    main-is:          Main.hs
    build-depends:    base
                    , http-client
                    , http-client-tls
                    , openai
                    , servant-client
                    , tasty
                    , tasty-hunit
                    , text
    ghc-options:      -Wall
